unpackaged/main/default/objects/CV_Mapping__mdt/CV_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to populate CalendarView records when activating Users to provide colour-coded calendars</description>
    <label>Calender View Mapping</label>
    <pluralLabel>Calender View Mappings</pluralLabel>
</CustomObject>