unpackaged/main/default/objects/CV_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this CV Mapping active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>