unpackaged/main/default/objects/CV_Mapping__mdt/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <inlineHelpText>Represents the color used in the background for records displayed in a user’s calendar view within the user interface.</inlineHelpText>
    <label>Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>