unpackaged/main/default/objects/CV_Mapping__mdt/fields/Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Display_Field__c</fullName>
    <inlineHelpText>Represents the SobjectType field used as the subject for records displayed in a user’s calendar view within the user interface.</inlineHelpText>
    <label>Display Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>