unpackaged/main/default/objects/CV_Mapping__mdt/fields/Field_for_Start__c.field-meta.xml
<CustomField>
    <fullName>Field_for_Start__c</fullName>
    <inlineHelpText>Represents the SobjectType field used as the start time for records displayed in a user’s calendar view within the user interface. Must be a date or dateTime field type.</inlineHelpText>
    <label>Field for Start</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>