unpackaged/main/default/objects/CV_Mapping__mdt/fields/Fill_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Fill_Pattern__c</fullName>
    <label>Fill Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>verticalStripes</fullName>
                <default>true</default>
                <label>verticalStripes</label>
            </value>
            <value>
                <fullName>ascDiagonalStripes</fullName>
            </value>
            <value>
                <fullName>descDiagonalStripes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>