unpackaged/main/default/objects/CV_Mapping__mdt/fields/List_View__c.field-meta.xml
<CustomField>
    <fullName>List_View__c</fullName>
    <inlineHelpText>References the ListView used to filter records represented by the CalendarView. ListView must have the same sObjectType. If no List View is defined, the calendar displays only records with the same owner as the CalendarView.</inlineHelpText>
    <label>List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>