unpackaged/main/default/objects/CV_Mapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>The type of standard or custom Salesforce object that is used to create records for the CalendarView. Use the API name of the desired SobjectType.</inlineHelpText>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>