unpackaged/main/default/objects/CV_Mapping__mdt/fields/User_Profiles__c.field-meta.xml
<CustomField>
    <fullName>User_Profiles__c</fullName>
    <inlineHelpText>Comma separated User Profile names for which user activation should trigger creation of this CalendarView</inlineHelpText>
    <label>User Profiles</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>