unpackaged/main/default/objects/CV_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_for_Start__c</columns>
    <columns>List_View__c</columns>
    <columns>Display_Field__c</columns>
    <columns>Colour__c</columns>
    <columns>Fill_Pattern__c</columns>
    <columns>User_Profiles__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>